# hiregraph-ai

./: .env.example  .gitignore  BUILD_SUMMARY.md  FINAL_SUMMARY.txt  IMPLEMENTATION_COMPLETE.md  INDEX.md  PROJECT_README.md  README.md  RESOURCES.md  RUBRIC.md  SETUP.md  STARTER_HINTS.md  SUBMISSION_CHECKLIST.md  assignment  main.py  pyproject.toml  run_single.py
api/: __init__.py  server.py
docs/architecture/: build_architecture.py  hiregraph_architecture.drawio
notebooks/: walkthrough.ipynb
sample_data/: expected_outcomes.md
sample_data/jds/: jd_junior_data.md  jd_senior.md  jd_senior_backend.md
sample_data/resumes/: PRAKASH_D_Data_Engineer_CV.docx  resume_eitan.md  resume_mira.md  resume_priya.md
src/hiregraph/: __init__.py  graph.py  models.py  nodes.py  parser.py  state.py  types.py
src/hiregraph/nodes/: classify.py  ingest.py
tests/: __init__.py  test_e2e.py  test_nodes.py  test_parser.py  test_state.py
ui/: index.html
