[project]
name = "hiregraph-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "langchain>=1.3.4",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.4",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "uvicorn>=0.49.0",
]
