[project]
name = "hiregraph"
version = "0.1.0"
description = "A LangGraph-based smart hiring assistant"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.1.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "pymupdf>=1.23.0",
    "httpx>=0.25.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "python-multipart>=0.0.32",
]

[tool.uv]
python-version = "3.11"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
